--- a/index.html
+++ b/index.html
@@ -37,11 +37,35 @@
      <div class="section1"> <a name="section1"></a><h3>The Legend </h3><p>The unicorn is a legendary animal that has been described since antiquity as a beast with a large, pointed, spiraling horn projecting from its forehead. The unicorn was depicted in ancient seals of the Indus Valley Civilization and was mentioned by the ancient Greeks in accounts of natural history by various writers, including Ctesias, Strabo, Pliny the Younger, and Aelian. The Bible also describes an animal, the re'em, which some translations have erroneously rendered with the word unicorn.</p></div>
 
 <div class="section2"><a name="section2"></a><h4>European History</h4><p>In European folklore, the unicorn is often depicted as a white horse-like or goat-like animal with a long horn and cloven hooves (sometimes a goat's beard). In the Middle Ages and Renaissance, it was commonly described as an extremely wild woodland creature, a symbol of purity and grace, which could only be captured by a virgin. In the encyclopedias its horn was said to have the power to render poisoned water potable and to heal sickness. In medieval and Renaissance times, the tusk of the narwhal was sometimes sold as unicorn horn.</p></div>
-   
+
+<h5>If moved by this website, please contact me:</h5>
+
+<div class="form1">
+<form action="http://formspree.io/" method="POST">
+  <p><label>First name: 
+    <input type="text" name="firstname" /></label></p>
+  <p><label>Last name:
+   <input type="text" name="lastname" /></label></p>
+<p><label>Address:
+  <input type="text" name="address" /></label></p>
+  <p><label>Email:
+    <input type="text" name="email" /></label></p>
+  <p><label>Phone Number:
+    <input type="text" placeholder="include ( ) in area code" name="phone" /></label></p>
+  <p><label>Comment:
+    <textarea name="comment"></textarea></label></p>
+  <p>
+  <input name="submit" type="submit" value="Submit" color:"#00008B">
+  <input type="reset" name="reset" value="Reset" />
+</p>
+
+</form>
+   </div>
     
-    <div id="footer">       
+  <div id="footer">       
 <ul>
-<li><a href="http://www.SoItGoes33.github.io/portfolio">Home</a></li><li><a href="#section1">The Legend</a></li><li><a href="#section2">European History</a></li><li><a href="http://www.SoItGoes33.github.io/portfolio/manifesto">Manifesto</a></li><li>&copy; 2015 Susan Fischer</li>
+<li><a href="http://www.SoItGoes33.github.io/portfolio">Home</a></li><li><a href="http://www.SoItGoes33.github.io/portfolio/manifesto">Manifesto</a></li><a href="#section1">The Legend</a></li><li><a href=
+"#section2">European History</a></li><li><a href="form1">Contact Me</a></li><li>&copy; 2015 Susan Fischer</li>
 </ul>
 </div>  
 </body>
