--- a/index.html
+++ b/index.html
@@ -38,10 +38,14 @@
 
 <div class="section2"><a name="section2"></a><h4>European History</h4><p>In European folklore, the unicorn is often depicted as a white horse-like or goat-like animal with a long horn and cloven hooves (sometimes a goat's beard). In the Middle Ages and Renaissance, it was commonly described as an extremely wild woodland creature, a symbol of purity and grace, which could only be captured by a virgin. In the encyclopedias its horn was said to have the power to render poisoned water potable and to heal sickness. In medieval and Renaissance times, the tusk of the narwhal was sometimes sold as unicorn horn.</p></div>
 
-<h5>If moved by this website, please contact me:</h5>
+<h5><p>Projects</h8></p><br>
+<img src="images/proj1.png" class="proj1">
+<img src="images/proj2.png" class="proj2">
+
+<h6>If moved by this website, please contact me:</h5>
 
 <div class="form1">
-<form action="http://formspree.io/" method="POST">
+<form action="http://formspree.io/" method="POST" onSubmit="alert("Thank you for filling out my form.  Your contribution has been noted.")">
   <p><label>First name: 
     <input type="text" name="firstname" /></label></p>
   <p><label>Last name:
