--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <h6>If moved by this website, please contact me:</h5>
 
 <div class="form1">
-<form action="http://formspree.io/" method="POST">
+<form action="http://formspree.io/smf341@nyu.edu" method="POST">
   <p><label>First name: 
     <input type="text" name="firstname" /></label></p>
   <p><label>Last name:
